// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs direction snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-0 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-0 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-0 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-0 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-0 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-0 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-0 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-0 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-0 .react-tabs__tab-panel {
  display: none;
}

.emotion-0 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-0 .react-tabs__tab {
  font-size: 14px;
}

<div
    class="emotion-0"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
      dir="rtl"
    >
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-17"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-16"
          role="tab"
          tabindex="0"
        >
          panel 1
        </li>
        <li
          aria-controls="react-tabs-19"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="react-tabs-18"
          role="tab"
        >
          panel 2
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-16"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="react-tabs-17"
        role="tabpanel"
      >
        panel 1
      </div>
      <div
        aria-labelledby="react-tabs-18"
        class="react-tabs__tab-panel"
        id="react-tabs-19"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs fontSize snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-0 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-0 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-0 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-0 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-0 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-0 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-0 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-0 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-0 .react-tabs__tab-panel {
  display: none;
}

.emotion-0 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-0 .react-tabs__tab {
  font-size: 24px;
}

<div
    class="emotion-0"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-25"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-24"
          role="tab"
          tabindex="0"
        >
          panel 1
        </li>
        <li
          aria-controls="react-tabs-27"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="react-tabs-26"
          role="tab"
        >
          panel 2
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-24"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="react-tabs-25"
        role="tabpanel"
      >
        panel 1
      </div>
      <div
        aria-labelledby="react-tabs-26"
        class="react-tabs__tab-panel"
        id="react-tabs-27"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs onSelect snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-0 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-0 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-0 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-0 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-0 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-0 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-0 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-0 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-0 .react-tabs__tab-panel {
  display: none;
}

.emotion-0 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-0 .react-tabs__tab {
  font-size: 14px;
}

<div
    class="emotion-0"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-9"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-8"
          role="tab"
          tabindex="0"
        >
          panel 1
        </li>
        <li
          aria-controls="react-tabs-11"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="react-tabs-10"
          role="tab"
        >
          panel 2
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-8"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="react-tabs-9"
        role="tabpanel"
      >
        panel 1
      </div>
      <div
        aria-labelledby="react-tabs-10"
        class="react-tabs__tab-panel"
        id="react-tabs-11"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-0 .react-tabs {
  -webkit-tap-highlight-color: transparent;
}

.emotion-0 .react-tabs__tab-list {
  margin: 0 0 10px;
  padding: 0;
}

.emotion-0 .react-tabs__tab {
  font-size: 16px;
  font-weight: 700;
  display: inline-block;
  border-bottom: none;
  bottom: -4px;
  position: relative;
  list-style: none;
  padding: 4px 10px;
  margin-left: 4px;
  margin-right: 4px;
  cursor: pointer;
  color: #69768C;
}

.emotion-0 .react-tabs__tab a {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.emotion-0 .react-tabs__tab:focus {
  box-shadow: 0 0 5px hsl(208, 99%, 50%);
  border-color: hsl(208, 99%, 50%);
  outline: none;
}

.emotion-0 .react-tabs__tab:focus:after {
  content: "";
  position: absolute;
  height: 5px;
  left: -4px;
  right: -4px;
  bottom: -5px;
  background: #fff;
}

.emotion-0 .react-tabs__tab--selected {
  border-bottom: 3px solid #5c6ac4;
  color: #5c6ac4;
}

.emotion-0 .react-tabs__tab--disabled {
  color: #69768C;
  cursor: default;
}

.emotion-0 .react-tabs__tab-panel {
  display: none;
}

.emotion-0 .react-tabs__tab-panel--selected {
  display: block;
}

.emotion-0 .react-tabs__tab {
  font-size: 14px;
}

<div
    class="emotion-0"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="react-tabs-1"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="react-tabs-0"
          role="tab"
          tabindex="0"
        >
          panel 1
        </li>
        <li
          aria-controls="react-tabs-3"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="react-tabs-2"
          role="tab"
        >
          panel 2
        </li>
      </ul>
      <div
        aria-labelledby="react-tabs-0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="react-tabs-1"
        role="tabpanel"
      >
        panel 1
      </div>
      <div
        aria-labelledby="react-tabs-2"
        class="react-tabs__tab-panel"
        id="react-tabs-3"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;
